--- a/Vagrantplaybook.yml
+++ b/Vagrantplaybook.yml
@@ -2,8 +2,4 @@
 
 - hosts: all
   roles:
-  - ../ansible-role-ansibleenv
-
-#  tasks:
-#  - include_vars: defaults/main.yml
-#  - include: tasks/main.yml
+  - role: .
