--- a/Vagrantplaybook.yml
+++ b/Vagrantplaybook.yml
@@ -3,3 +3,5 @@
 - hosts: all
   roles:
   - role: .
+    ansibleenv_libraries:
+      'robparrott.vagrant': https://github.com/robparrott/ansible-vagrant.git
