--- a/templates/ansible.cfg
+++ b/templates/ansible.cfg
@@ -2,11 +2,11 @@
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m
 
 [defaults]
-action_plugins = {{ ansibleenv_root }}/action_plugins:/usr/share/ansible_plugins/action_plugins
-callback_plugins = {{ ansibleenv_root }}/callback_plugins:/usr/share/ansible_plugins/callback_plugins
-connection_plugins = {{ ansibleenv_root }}/connection_plugins:/usr/share/ansible_plugins/connection_plugins
-filter_plugins = {{ ansibleenv_root }}/filter_plugins:/usr/share/ansible_plugins/filter_plugins
-library = {{ ansibleenv_root }}/library:/usr/share/ansible
-lookup_plugins = {{ ansibleenv_root }}/lookup_plugins:/usr/share/ansible_plugins/lookup_plugins
-roles_path = {{ ansibleenv_root }}/roles:/etc/ansible/roles
-vars_plugins = {{ ansibleenv_root }}/vars_plugins:/usr/share/ansible_plugins/vars_plugins
+action_plugins = {{ ansible_root }}/action_plugins:/usr/share/ansible_plugins/action_plugins
+callback_plugins = {{ ansible_root }}/callback_plugins:/usr/share/ansible_plugins/callback_plugins
+connection_plugins = {{ ansible_root }}/connection_plugins:/usr/share/ansible_plugins/connection_plugins
+filter_plugins = {{ ansible_root }}/filter_plugins:/usr/share/ansible_plugins/filter_plugins
+library = {{ ansible_root }}/library:/usr/share/ansible
+lookup_plugins = {{ ansible_root }}/lookup_plugins:/usr/share/ansible_plugins/lookup_plugins
+roles_path = {{ ansible_root }}/roles:/etc/ansible/roles
+vars_plugins = {{ ansible_root }}/vars_plugins:/usr/share/ansible_plugins/vars_plugins
